--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h3 class="heading"><a href="./pages/segunda-pagina.html">JavaScript</a></h3>
+    <h3 class="heading">JavaScript</h3>
 
     <div class="container">
 
