melhor config até agora

--- a/index.html
+++ b/index.html
@@ -14,50 +14,16 @@
 
 <body>
     <h3 class="heading">JavaScript</h3>
-
     <div class="container">
-
         <div class="main-video">
             <div class="video">
-                <video src="img/01.mp4" controls muted autoplay></video>
-                <h3 class="title">Aula 01</h3>
+                <video src="" controls muted autoplay></video>
+                <h3 class="title"></h3>
             </div>
         </div>
-
-        <div class="video-list">
-            <div class="vid active">
-                <video src="img/01.mp4" muted></video>
-                <h3 class="title">Aula 01</h3>
-            </div>
-            <div class="vid">
-                <video src="img/02.mp4" muted></video>
-                <h3 class="title">Aula 02</h3>
-            </div>
-            <div class="vid">
-                <video src="img/03.mp4" muted></video>
-                <h3 class="title">Aula 03</h3>
-            </div>
-            <div class="vid">
-                <video src="img/04.mp4" muted></video>
-                <h3 class="title">Aula 04</h3>
-            </div>
-            <div class="vid">
-                <video src="img/05.mp4" muted></video>
-                <h3 class="title">Aula 05</h3>
-            </div>
-            <div class="vid">
-                <video src="img/06.mp4" muted></video>
-                <h3 class="title">Aula 06</h3>
-            </div>
-            <div class="vid">
-                <video src="img/07.mp4" muted></video>
-                <h3 class="title">Aula 07</h3>
-            </div>
-        </div>
-
+        <div class="video-list"></div>
     </div>
-
-    <script src="script.js"></script>
+    <script src="script.js" type="module"></script>
 </body>
 
 </html>
